--- a/requirements.txt
+++ b/requirements.txt
@@ -7,27 +7,22 @@ notebook~=7.4.3
 # Python kernel (optional)
 jupyterlite-pyodide-kernel==0.6.1
 
-# JavaScript kernel (optional)
-jupyterlite-javascript-kernel==0.3.0
-
 # Language support (optional)
 jupyterlab-language-pack-fr-FR
 jupyterlab-language-pack-zh-CN
-
-# P5 kernel (optional)
-jupyterlite-p5-kernel==0.1.0
+jupyterlab-language-pack-ja-JP
 
 # JupyterLab: Fasta file renderer (optional)
-jupyterlab-fasta>=3.3.0,<4
+# jupyterlab-fasta>=3.3.0,<4
 # JupyterLab: Geojson file renderer (optional)
-jupyterlab-geojson>=3.4.0,<4
+# jupyterlab-geojson>=3.4.0,<4
 # JupyterLab: guided tour (optional)
 # TODO: re-enable after https://github.com/jupyterlab-contrib/jupyterlab-tour/issues/82
 # jupyterlab-tour
 # JupyterLab: dark theme
-jupyterlab-night
+# jupyterlab-night
 # JupyterLab: Miami nights theme (optional)
-jupyterlab_miami_nights
+# jupyterlab_miami_nights
 
 # Python: ipywidget library for Jupyter notebooks (optional)
 ipywidgets>=8.1.3,<9
@@ -43,3 +38,15 @@ ipyleaflet
 # Python: plotting libraries (optional)
 plotly>=6,<7
 bqplot
+
+# 経済学のためのPython入門
+japanize-matplotlib-jlite
+jupyterlab-open-url-parameter
+jupyterlab-filesystem-access
+gapminder
+lmdiag
+pandas-datareader
+py4macro
+py4etrics
+pyodide-http
+wooldridge
